--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="web-container">
+        <h1>Prueba con GIT HUB</h1>
         <header class="nav-container">
             <div class="nav-logo">
                 <!--Logo imagen-->
